--- a/Blind75/Properties/Resources.resx
+++ b/Blind75/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="question_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\question_11.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="merge_ex1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\merge_ex1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
